deploy/platform/monitoring/manual/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-manual
  labels:
    app.kubernetes.io/part-of: manual-monitoring
